mdx file for js blog

--- a/src/app/blog/javascript/page.mdx
+++ b/src/app/blog/javascript/page.mdx
@@ -1,13 +1,86 @@
 ---
-title: "Getting Started with JavaScript"
-description: "An introduction to JavaScript and its fundamentals."
+title: "JavaScript Roadmap (Basic to Advanced)"
+description: "A complete roadmap to learning JavaScript from basics to advanced topics."
 ---
 
-## Variables
+# 📚 JavaScript Roadmap (Basic to Advanced)
 
-You can declare variables using `var`, `let`, and `const`:
+We'll go chapter by chapter, ensuring you fully grasp each concept before moving on. Here's the full roadmap:
 
-```js
-let message = "Hello, world!";
-console.log(message);
-```
+## **📌 Chapter 1: Introduction to JavaScript**
+
+- What is JavaScript?
+- History & Evolution
+- How JavaScript Works (Execution Context, Call Stack)
+- JavaScript in Browsers vs. Node.js
+- Writing Your First JS Code (Console, Script Tag)
+- Variables (`var`, `let`, `const`)
+- Data Types & Type Coercion
+- Operators (Arithmetic, Logical, Comparison)
+- Basic Input/Output (`prompt`, `alert`, `console.log`)
+
+## **📌 Chapter 2: Control Flow & Loops**
+
+- If-else Statements
+- Switch Statements
+- Loops (`for`, `while`, `do-while`)
+- Break & Continue
+- Nested Loops
+- Practical Use Cases
+
+## **📌 Chapter 3: Functions in JavaScript**
+
+- Function Declarations & Expressions
+- Arrow Functions
+- Callback Functions
+- Function Scope & Closures
+- Higher-Order Functions
+
+## **📌 Chapter 4: Arrays & Objects**
+
+- Array Methods (`map`, `filter`, `reduce`, etc.)
+- Objects & Object Methods
+- Spread & Rest Operators
+- Destructuring Assignment
+
+## **📌 Chapter 5: DOM Manipulation**
+
+- Selecting Elements (`getElementById`, `querySelector`)
+- Changing Content & Styles
+- Event Listeners
+- Forms & User Input Handling
+
+## **📌 Chapter 6: Asynchronous JavaScript**
+
+- Callbacks, Promises & Async/Await
+- Fetch API & Axios
+- Error Handling (`try-catch`)
+
+## **📌 Chapter 7: Object-Oriented JavaScript**
+
+- Prototypes & Prototype Chain
+- Classes & Inheritance
+- Encapsulation, Polymorphism, Abstraction
+
+## **📌 Chapter 8: Advanced JavaScript Concepts**
+
+- Execution Context & Hoisting
+- Closures in Depth
+- `this` Keyword & Its Various Behaviors
+- Event Loop & Microtasks
+- Memory Management & Garbage Collection
+
+## **📌 Chapter 9: JavaScript in the Real World**
+
+- ES6+ Features
+- Modules (`import` & `export`)
+- Web APIs (`localStorage`, `sessionStorage`, etc.)
+- JSON & API Handling
+
+## **📌 Chapter 10: JavaScript Performance & Best Practices**
+
+- Performance Optimization
+- Writing Clean & Maintainable Code
+- Debugging Techniques
+
+---
